# hack-rksi

./: .env.example  .gitignore  AGENTS.md  Makefile  README.md  bootstrap-on-clean-debian.sh  compose.yaml
bare-debian-scripts/: bootstrap.sh  run-rest-server.sh
python/: .dockerignore  .env.example  Dockerfile  alembic.ini  pyproject.toml
python/src/hack/alembic/: env.py
python/src/hack/alembic/versions/: 0e6f3d1c2e4a_login_recovery.py  1489c65f56b3_verification_upd.py  1dd5c68f219a_initial.py  4a76550f1dde_users_and_login_sessions.py  4bdfc6368052_verification.py  5d8ae8119184_events_and_soft_delete.py  5f65ceaa5196_user_full_name.py  7052a28e0ace_notifications.py  7f57fb756f97_upd_fks.py  8e971abc9753_initial.py  9468aa2fe528_add_verification_fields.py  9ee6e7350419_reminder_queued_at.py  a89f8082ac4f_regenerate_from_scratch.py  bac8c025992f_enable_fks_in_sqlite.py  c70bc5e8abc2_fix_concurrency_support_in_reference_.py  c7f444a35e9c_checks.py  ceac1d697554_add_cta_fields_to_instant_notifications.py  d4e272feaf5d_.py
python/src/hack/core/: providers.py
python/src/hack/core/errors/: access.py  appeal_routing.py  verification.py
python/src/hack/core/models/: __init__.py  appeal.py  base.py  check.py  event.py  instant_notification.py  issued_login_recovery.py  issued_registration.py  lead.py  lead_source.py  login_session.py  notification.py  notification_events.py  operator.py  user.py
python/src/hack/core/services/: access.py  appeal.py  appeal_routing.py  checks.py  email_factory.py  notification.py  providers.py  uow_ctl.py  verification.py
python/src/hack/integration_tests/: api_templates.py  conftest.py  test_access.py  test_appeals_routing.py  test_auth.py  test_checks.py  test_event_export.py  test_events.py  test_files.py  test_lead_sources.py  test_notifications.py  test_operators.py  test_statistics.py  test_users_admin.py  test_userspace_events.py
python/src/hack/rest_server/: exception_handlers.py  models.py  providers.py
python/src/hack/rest_server/main/: run_rest_server.py
python/src/hack/rest_server/routers/: __init__.py  access.py  appeals.py  checks.py  debug.py  events.py  events_cards.py  files.py  inspect.py  lead_source_operators.py  lead_sources.py  notifications.py  operators.py  statistics.py  users.py  verification.py
python/src/hack/rest_server/schemas/: access.py  appeals.py  checks.py  debug.py  events.py  files.py  inspect.py  lead_source_operators.py  lead_sources.py  notifications.py  operators.py  statistics.py  users.py  verification.py
python/src/hack/tasks/: providers.py
python/src/hack/tasks/brokers/: default.py  redis.py
python/src/hack/tasks/tasks/: allocate_operator.py  event_reminders.py  notify.py  send_email.py
python/templates/email/: _event_details.html  admin_set_password.html  base.html  event_created.html  event_participation_cancelled.html  event_participation_confirmed.html  event_reminder.html  event_updated.html  password_changed.html  password_reset_link.html  registration_confirm_code.html  registration_welcome.html
