[project]
name = "hack"
version = "0.1.0"
requires-python = ">=3.12, <4.0"
dependencies = [
    "dishka",
    "sqlalchemy",
    "pydantic",
    "pydantic-settings",
    "fastapi",
    "uvicorn",
    "psycopg[binary] (>=3.3.2,<4.0.0)",
    "alembic",
    "ruff",
    "pytest",
    "deepdiff",
    "redis (<7)",
    "authx (>=1.4.3,<2.0.0)",
    "taskiq (>=0.12.1,<0.13.0)",
    "argon2-cffi (>=25.1.0,<26.0.0)",
    "taskiq-redis (>=1.1.2,<2.0.0)",
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[project.scripts]
run-rest-server = "hack.rest_server.main.run_rest_server:main"
run-tasksd = "hack.tasksd.main:main"
run-bindingd = "hack.bindingd.main:main"
run-agent-rest-server = "hack.agent.rest_server.main.run_rest_server:main"

[tool.ruff]
line-length = 79
extend-exclude = ["alembic"]

[tool.ruff.lint]
select = [
    # pycodestyle
    "E",
    # Pyflakes
    "F",
    # pyupgrade
    "UP",
    # flake8-bugbear
    "B",
    # flake8-simplify
    "SIM",
    # isort
    "I",
]
