[project]
name = "hack"
version = "0.1.0"
requires-python = ">=3.12, <4.0"
dependencies = [
    "dishka",
    "sqlalchemy",
    "pydantic[email] (>=2.12.5,<3.0.0)",
    "pydantic-settings",
    "fastapi",
    "uvicorn",
    "psycopg[binary] (>=3.3.2,<4.0.0)",
    "alembic",
    "ruff",
    "pytest",
    "deepdiff",
    "redis (<7)",
    "authx (>=1.4.3,<2.0.0)",
    "taskiq (>=0.12.1,<0.13.0)",
    "argon2-cffi (>=25.1.0,<26.0.0)",
    "taskiq-redis (>=1.1.2,<2.0.0)",
    "aiosmtplib (>=5.0.0,<6.0.0)",
    "alembic-postgresql-enum (>=1.8.0,<2.0.0)",
    "aioboto3 (>=15.5.0,<16.0.0)",
    "python-multipart (>=0.0.20,<0.0.21)",
    "jinja2 (>=3.1.6,<4.0.0)",
    "openpyxl (>=3.1.5,<4.0.0)",
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[project.scripts]
run-rest-server = "hack.rest_server.main.run_rest_server:main"
run-tasksd = "hack.tasksd.main:main"
run-bindingd = "hack.bindingd.main:main"
run-agent-rest-server = "hack.agent.rest_server.main.run_rest_server:main"

[tool.ruff]
line-length = 79
extend-exclude = ["alembic"]

[tool.ruff.lint]
select = [
    # pycodestyle
    "E",
    # Pyflakes
    "F",
    # pyupgrade
    "UP",
    # flake8-bugbear
    "B",
    # flake8-simplify
    "SIM",
    # isort
    "I",
]
